# scikit-image

./: .appveyor.yml  .codecov.yml  .coderabbit.yaml  .coveragerc  .directory  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mailmap  .meeseeksdev.yml  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  3D Rank Filter.ipynb  =0.23  =5.2.0  AGENTS.md  CHANGES.txt  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTING.txt  CONTRIBUTORS.md  CONTRIBUTORS.rst  CONTRIBUTORS.txt  CORE_DEVELOPER.markdown  CORE_DEVELOPER.txt  DEPENDS.txt  DEVELOPMENT.txt  GEMINI.md  GUIDELINES.txt  INSTALL.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  (+53 more)
skimage/: __init__.py  __init__.pyi  _backend.py  _build.py  _transform_common.py  _version.py  conftest.py  image_quality_measure.py  meson.build  setup.py  version.py
skimage/__check_build/: README  __init__.py  setup.py
skimage/_build_utils/: __init__.py  compiler_helper.py  copyfiles.py  cythoner.py  gcc_build_bitness.py  system_info.py  tempita.py  version.py
skimage/_shared/: Buffer2D.py  GLBuffer2D.py  Image2D.py  IncrementalTileList.pyx  LICENSE.txt  PrefixSum.pyx  StreamCompact.pyx  _ccomp.pxd  _default_value.py  _dependency_checks.py  _deprecators.py  _geometric.py  _geometry.py  _interpolation_test.pyx  _safe_as_int.py  _tempfile.py  _warnings.py  _warp.py  _warps_cy.pyx  compat.py  convex_hull.py  convex_hull.pyx  coord.py  cqueue.pxd  diffusion_utils.py  dtype.py  fast_exp.h  fast_exp.hpp  fast_exp.pxd  fast_exp.pyx  fft.py  filters.py  fused_numerics.pxd  geometry.pxd  geometry.pyx  helper.py  incremental_tile_list.cl  interpolation.pxd  interpolation.pyx  kahan.pyx  (+21 more)
skimage/_vendored/: numpy_lookfor.py
skimage/color/: __init__.py  _colorconv.pyx  _multimethods.py  adapt_rgb.py  bayer2rgb.py  colorconv.py  colorlabel.py  colors.ini  data_convert.py  delta_e.py  meson.build  setup.py
skimage/data/: __init__.py  __init__.pyi  _binary_blobs.py  _blobs_3d_fiji_skeleton.tif  _detect.py  _fetchers.py  _registry.py  astronaut_GRAY_hog.npy  astronaut_GRAY_hog_L1.npy  astronaut_GRAY_hog_L1.npz  astronaut_GRAY_hog_L2-Hys.npy  astronaut_GRAY_hog_L2-Hys.npz  binary_origin_output.npz  boundary_tracing_tests.npz  brain.tiff  bw_text_skeleton.npy  bw_text_skeleton.npz  cbcl_database.npy  chessboard_GRAY_U8.npz  chessboard_RGB_U8.npz  detect.py  diamond-close-matlab-output.npz  diamond-dilate-matlab-output.npz  diamond-erode-matlab-output.npz  diamond-open-matlab-output.npz  diamond-tophat-matlab-output.npz  disk-bothat-matlab-output.npz  disk-close-matlab-output.npz  disk-dilate-matlab-output.npz  freak_descriptor_pairs.txt  generate_logliklihood.py  generate_shapes.py  gradient.avi  gray_morph_output.npz  gray_origin_output.npz  hog_astronaut.mat  hog_astronaut_2.mat  lena_GRAY_U8.npz  lena_GRAY_U8_hog.npy  lena_RGB_U8.npy  (+14 more)
skimage/deconvolution/: __init__.py  uft.py  wiener.py
skimage/detection/: _template.pyx  setup.py  template.py
skimage/draw/: __init__.py  _draw.pyx  _draw_nd.pyx  _polygon2mask.py  _random_shapes.py  draw.py  draw3d.py  draw_nd.py  gif.py  meson.build  random_shapes.py  setup.py
skimage/dtw/: __init__.py  _dtw.pyx  setup.py
skimage/evaluate/: __init__.py  _adapted_rand_error.py  _contingency_table.py  _structural_similarity.py  _variation_of_information.py  simple_metrics.py  utils.py
skimage/exposure/: Hussein_3D_unwrapper_with_mask_and_wrap_around_option.c  Miguel_2D_unwrapper_with_mask_and_wrap_around_option.c  __init__.py  __init__.pyi  _adapthist.py  _adapthist.pyx  _branch_cuts.pyx  _goldstein.pyx  _multimethods.py  _unwrap_1d.pyx  _unwrap_2d.pyx  _unwrap_3d.pyx  _unwrap_naive.pyx  backproject.py  clahe.h  exposure.py  hdr.py  histogram_matching.py  meson.build  queue.c  queue.h  setup.py  unwrap.py  unwrap3D.pyx  unwrap_2d_ljmu.c  unwrap_3d_ljmu.c
skimage/face/: all.py  embeddings.py  images.py  simple_video.py  video.py
skimage/feature/: __init__.py  __init__.pyi  _api.py  _basic_features.py  _brief.py  _brief_cy.pyx  _canny.py  _canny_cy.pyx  _cascade.pyx  _daisy.py  _fisher_vector.py  _freak_cy.pyx  _greycomatrix.py  _greycomatrix.pyx  _haar.pxd  _haar.pyx  _harris.py  _hessian_det_appx.pyx  _hessian_det_appx_pythran.py  _hog.py  _hoghistogram.pyx  _interest.pyx  _kadir_brady.py  _kb.py  _mnxc.py  _multimethods.py  _shapecontext.pyx  _sift.pyx  _template.pyx  _texture.pxd  _texture.py  _texture.pyx  blob.py  brief.py  brief_cy.pyx  brief_pythran.py  censure.py  censure_cy.pyx  contour.py  corner.py  (+31 more)
skimage/filter/: __init__.py  _canny.py  _ctmf.pyx  _denoise.py  _denoise.pyx  _denoise_cy.pyx  _gabor.py  _gaussian.py  _histogram.h  _inpaint.pyx  _inpaint.pyx~HEAD  _inpaint_criminisi.pyx  _inpaint_efros.pyx  _inpaint_exemplar.py  _inpaint_exemplar.pyx  _inpaint_fmm.pyx  _inpaint_texture.py  _inpaint_texture.pyx  _nl_means_denoising.pyx  _rank_order.py  _thresholding.pyx  _tv_denoise.py  _wavelet.py  canny.py  ctmf.py  denoise.py  edges.py  gauss.py  harris.py  inpaint.py  inpaint.py~HEAD  inpaint_exemplar.py  inpaint_texture.py  lpi_filter.py  nl_means_denoising.py  rank_order.py  setup.py  thresholding.py  tv_denoise.py
skimage/filters/: LICENSE.txt  __init__.py  __init__.pyi  _api.py  _blur_effect.py  _ctmf.pyx  _diffusion_linear.py  _diffusion_nonlinear_aniso.py  _diffusion_nonlinear_iso.py  _diffusion_utils.py  _fft_based.py  _frangi.py  _gabor.py  _gaussian.py  _homomorphic.py  _identity.py  _lic.py  _lpi_filter.py  _median.py  _multimethods.py  _multiotsu.pyx  _patch_processing.py  _rank_order.py  _ridges.py  _sparse.py  _sparse_cy.pyx  _thresholding.py  _unsharp_mask.py  _unsharp_mask.pyx  _window.py  alpha_rooting.py  diffusion_linear.py  diffusion_nonlinear_aniso.py  diffusion_nonlinear_iso.py  edges.py  filter_bank.py  lpi_filter.py  meson.build  ridges.py  setup.py  (+3 more)
skimage/find_contours/: __init__.py  setup.py
skimage/future/: __init__.py  __init__.pyi  _thin_plate_splines.py  graph.py  manual_segmentation.py  meson.build  setup.py  trainable_segmentation.py
skimage/gpu/: convolve.py  fft.py  median.py
(+3304 files in other folders)
