[project]
name = 'scikit-image'
description = 'Image processing in Python'
requires-python = '>=3.10'
readme = 'README.md'
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: C',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development :: Libraries',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
dynamic = ['version']
dependencies = [
    'numpy>=1.24',
    'scipy>=1.11.2',
    'networkx>=3.0',
    'pillow>=10.1',
    'imageio>=2.33,!=2.35.0',
    'tifffile>=2022.8.12',
    'packaging>=21',
    'lazy-loader>=0.4',
]

[[project.maintainers]]
name = 'scikit-image developers'
email = 'skimage-core@discuss.scientific-python.org'

[project.license]
file = 'LICENSE.txt'

[project.optional-dependencies]
build = [
    # Also update [build-system] -> requires
    'meson-python>=0.16',
    'setuptools>=68',
    'ninja>=1.11.1.1',
    'Cython>=3.0.8',
    'pythran>=0.16',
    'numpy>=2.0',
    # Developer UI
    'spin==0.13',
    'build>=1.2.1',
]
data = ['pooch>=1.6.0']
developer = [
    'pre-commit',
    'ipython',
    "tomli; python_version < '3.11'",
]
docs = [
    'sphinx>=8.0',
    'sphinx-gallery[parallel]>=0.18',
    'numpydoc>=1.7',
    'sphinx-copybutton',
    'matplotlib>=3.7',
    'dask[array]>=2022.9.2',
    'pandas>=2.0',
    'seaborn>=0.11',
    'pooch>=1.6',
    'tifffile>=2022.8.12',
    'myst-parser',
    'intersphinx-registry>=0.2411.14',
    'ipywidgets',
    'ipykernel',  # needed until https://github.com/jupyter-widgets/ipywidgets/issues/3731 is resolved
    'plotly>=5.20',
    'kaleido==0.2.1',
    'scikit-learn>=1.2',
    'sphinx_design>=0.5',
    'pydata-sphinx-theme>=0.16',
    'PyWavelets>=1.6',
    'pytest-doctestplus',
]
optional = [
    'SimpleITK',
    'astropy>=5.0',
    'cloudpickle>=0.2.1',  # necessary to provide the 'processes' scheduler for dask
    'dask[array]>=2021.1.0,!=2024.8.0',
    'matplotlib>=3.7',
    'pooch>=1.6.0',
    'pyamg>=5.2',
    'PyWavelets>=1.6',
    'scikit-learn>=1.2',
]
test = [
    'asv',
    'numpydoc>=1.7',
    'pooch>=1.6.0',
    'pytest>=7.0',
    'pytest-cov>=2.11.0',
    'pytest-localserver',
    'pytest-faulthandler',
    'pytest-doctestplus',
]

[project.urls]
homepage = 'https://scikit-image.org'
documentation = 'https://scikit-image.org/docs/stable'
source = 'https://github.com/scikit-image/scikit-image'
download = 'https://pypi.org/project/scikit-image/#files'
tracker = 'https://github.com/scikit-image/scikit-image/issues'

[build-system]
build-backend = 'mesonpy'
requires = [
    'meson-python>=0.16',
    'setuptools>=68',
    'Cython>=3.0.8',
    'pythran>=0.16',
    'lazy_loader>=0.4',
    'numpy>=2.0',
]

[tool.spin]
package = 'skimage'

[tool.spin.commands]
Build = [
    'spin.cmds.meson.build',
    'spin.cmds.pip.install',
    'spin.cmds.meson.test',
    '.spin/cmds.py:sdist',
]
Environments = [
    'spin.cmds.meson.run',
    '.spin/cmds.py:ipython',
    'spin.cmds.meson.python',
]
Documentation = ['.spin/cmds.py:docs']
Metrics = [
    '.spin/cmds.py:asv'
]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = [
    'F',
    'E',
    'W',
    'UP',
    'NPY201',
]
ignore = [
    'E501',
    'E741',
    'E712',
    'E721',
    'UP038',  # non-pep604-isinstance -- https://github.com/astral-sh/ruff/issues/7871
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    'E402',
    'F401',
    'F403',
    'F405',
]
"**/__init__.pyi" = [
    'E402',
    'F401',
    'F403',
    'F405',
]
"skimage/_shared/testing.py" = ['F401']
"doc/examples/**/*.py" = ['E402']

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra  --strict-config  --strict-markers"
log_cli_level = "INFO"
xfail_strict = true
testpaths = ["skimage", "benchmarks"]
python_files = ["benchmark_*.py", "test_*.py"]
python_classes = ["Test*", "*Suite"]
python_functions = ["time_*", "test_*", "peakmem_*"]
filterwarnings = [
    "error",
    "ignore:.*use `imageio` or other I/O packages directly.*:FutureWarning:skimage",
]

[tool.coverage.run]
omit = ['*/tests/*']

[tool.changelist]
ignored_user_logins = [
    "web-flow",
    "pre-commit-ci[bot]"
]
