[metadata]
name = scikit-image
description = Image Processing in Python
author = Stefan van der Walt
author_email = stefan@sun.ac.za
url = https://scikit-image.org
git_url = https://github.com/scikit-image/scikit-image
download_url = https://scikit-image.org/docs/stable/install.html
license_file = LICENSE.txt
python_requires = >=3.6