[tool:pytest]
python_files=benchmark_*.py test_*.py
python_classes=Test* *Suite
python_functions=time_* test_* peakmem_*

[run]
omit= */tests/*

[metadata]
license_files = LICENSE.txt

[flake8]
per-file-ignores =
    # ignore whitespace errors in specific files to preserve desired array formatting
    test_*.py:E201,E202,E203
    skimage/color/colorconv.py:E201,E202,E203
    skimage/filters/tests/test_fft_based.py:E201,E202,E203,E501
    skimage/measure/_moments_analytical.py:E226
    tools/precompute/moments_sympy.py:E226
